applications/directus/overlays/homelab/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: directus
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    external-dns.alpha.kubernetes.io/hostname: travel-cms.homelab.kszpakowski.com
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - travel-cms.homelab.kszpakowski.com
      secretName: directus-cert
  rules:
    - host: travel-cms.homelab.kszpakowski.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: directus
                port:
                  name: http
